--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -1,234 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="dist/css/adminlte.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://use.fontawesome.com/d59744589c.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.js"
-        integrity="sha512-Lii3WMtgA0C0qmmkdCpsG0Gjr6M0ajRyQRQSbTF6BsrVh/nhZdHpVZ76iMIPvQwz1eoXC3DmAg9K51qT5/dEVg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+<%- include("partials/header") -%>
 
-</head>
+    <aside class="main-sidebar sidebar-dark-primary elevation-4">
+        <!-- Brand Logo -->
+        <a href="#" class="brand-link">
+            <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+                style="opacity: .8">
+            <span class="brand-text font-weight-light">Analytics</span>
+        </a>
 
-<body class="hold-transition sidebar-mini ">
-    <div class="wrapper">
-
-        <nav class="main-header navbar navbar-expand-lg navbar-light bg-info">
-            <i class="fa fa-home fa-lg"></i><a class="navbar-brand" href="/home">Home</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </nav>
-          
-        <aside class="main-sidebar sidebar-dark-primary elevation-4">
-            <!-- Brand Logo -->
-            <a href="#" class="brand-link">
-                <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-                    style="opacity: .8">
-                <span class="brand-text font-weight-light">Analytics</span>
-            </a>
-
-            <!-- Sidebar -->
-            <div class="sidebar">
-                <!-- Sidebar user panel (optional) -->
-                <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                    <div class="image">
-                        <img src="images/user.png" class="img-circle elevation-2" alt="User Image">
-                    </div>
-                    <div class="info">
-                        <a href="#" class="d-block">
-                            <%= name %>
-                        </a>
-                    </div>
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <!-- Sidebar user panel (optional) -->
+            <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                <div class="image">
+                    <img src="images/user.png" class="img-circle elevation-2" alt="User Image">
                 </div>
-
-                <!-- SidebarSearch Form -->
-                <div class="form-inline">
-                    <div class="input-group" data-widget="sidebar-search">
-                        <input class="form-control form-control-sidebar" type="search" placeholder="Search"
-                            aria-label="Search">
-                        <div class="input-group-append">
-                            <button class="btn btn-sidebar">
-                                <i class="fas fa-search fa-fw"></i>
-                            </button>
-                        </div>
-                    </div>
+                <div class="info">
+                    <a href="#" class="d-block">
+                        <%= name %>
+                    </a>
                 </div>
-                <!-- /.sidebar-menu -->
             </div>
-            <!-- /.sidebar -->
-        </aside>
 
-        <div class="content-wrapper">
-            <section class="content">
-                <div class="container-fluid">
-                    <div class="jumbotron jumbotron-fluid bg-gradient-secondary">
-                        <div class="container">
-                            <h1 class="display-4 font-weight-bold">Analytics</h1>
-                            <p class="lead font-weight-bold">Based on the Human Resource Data of an Organization</p>
-                        </div>
+            <!-- SidebarSearch Form -->
+            <div class="form-inline">
+                <div class="input-group" data-widget="sidebar-search">
+                    <input class="form-control form-control-sidebar" type="search" placeholder="Search"
+                        aria-label="Search">
+                    <div class="input-group-append">
+                        <button class="btn btn-sidebar">
+                            <i class="fas fa-search fa-fw"></i>
+                        </button>
                     </div>
-                    <div class="container">
-                        <p>
-                            <a class="btn btn-info" data-toggle="collapse" href="#multiCollapseExample1"
-                                role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Polar Area
-                                Graph</a>
-                            <button class="btn btn-info" type="button" data-toggle="collapse"
-                                data-target="#multiCollapseExample2" aria-expanded="false"
-                                aria-controls="multiCollapseExample2">Bar Graph</button>
-                            <button class="btn btn-info" type="button" data-toggle="collapse"
-                                data-target="#multiCollapseExample3" aria-expanded="false"
-                                aria-controls="multiCollapseExample3">Doughnut Chart</button>
-                            <button class="btn btn-info" type="button" data-toggle="collapse"
-                                data-target="#multiCollapseExample4" aria-expanded="false"
-                                aria-controls="multiCollapseExample4">Line Graph</button>
-                            <button class="btn btn-info" type="button" data-toggle="collapse"
-                                data-target=".multi-collapse" aria-expanded="false"
-                                aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle All
-                                Graps</button>
-                        </p>
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="collapse multi-collapse" id="multiCollapseExample1">
-                                    <div class="card card-body" style="height: 30rem;">
-                                        <canvas id="myChart1"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="collapse multi-collapse" id="multiCollapseExample2">
-                                    <div class="card card-body" style="height: 30rem;">
-                                        <canvas id="myChart2"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="collapse multi-collapse" id="multiCollapseExample3">
-                                    <div class="card card-body" style="height: 30rem;">
-                                        <canvas id="myChart3"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="collapse multi-collapse" id="multiCollapseExample4">
-                                    <div class="card card-body" style="height: 30rem;">
-                                        <canvas id="myChart4"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
                 </div>
-            </section>
+            </div>
+            <!-- /.sidebar-menu -->
         </div>
-        <footer class="main-footer">
-            <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">Analytics.io</a>.</strong>
-            All rights reserved.
-            <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 3.2.0
+        <!-- /.sidebar -->
+    </aside>
+
+    <div class="content-wrapper">
+        <section class="content">
+            <div class="container-fluid">
+                <div class="jumbotron jumbotron-fluid bg-gradient-secondary">
+                    <div class="container">
+                        <h1 class="display-4 font-weight-bold">Analytics</h1>
+                        <p class="lead font-weight-bold">Based on the Human Resource Data of an Organization</p>
+                    </div>
+                </div>
+                <div class="container">
+                    <p>
+                        <a class="btn btn-info" data-toggle="collapse" href="#multiCollapseExample1" role="button"
+                            aria-expanded="false" aria-controls="multiCollapseExample1">Polar Area
+                            Graph</a>
+                        <button class="btn btn-info" type="button" data-toggle="collapse"
+                            data-target="#multiCollapseExample2" aria-expanded="false"
+                            aria-controls="multiCollapseExample2">Bar Graph</button>
+                        <button class="btn btn-info" type="button" data-toggle="collapse"
+                            data-target="#multiCollapseExample3" aria-expanded="false"
+                            aria-controls="multiCollapseExample3">Doughnut Chart</button>
+                        <button class="btn btn-info" type="button" data-toggle="collapse"
+                            data-target="#multiCollapseExample4" aria-expanded="false"
+                            aria-controls="multiCollapseExample4">Line Graph</button>
+                        <button class="btn btn-info" type="button" data-toggle="collapse" data-target=".multi-collapse"
+                            aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle All
+                            Graps</button>
+                    </p>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="collapse multi-collapse" id="multiCollapseExample1">
+                                <div class="card card-body" style="height: 30rem;">
+                                    <canvas id="myChart1"></canvas>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="collapse multi-collapse" id="multiCollapseExample2">
+                                <div class="card card-body" style="height: 30rem;">
+                                    <canvas id="myChart2"></canvas>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="collapse multi-collapse" id="multiCollapseExample3">
+                                <div class="card card-body" style="height: 30rem;">
+                                    <canvas id="myChart3"></canvas>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="collapse multi-collapse" id="multiCollapseExample4">
+                                <div class="card card-body" style="height: 30rem;">
+                                    <canvas id="myChart4"></canvas>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
-        </footer>
+        </section>
     </div>
-    <script>
-        const ctx1 = document.getElementById('myChart1');
-        const ctx2 = document.getElementById('myChart2');
-        const ctx3 = document.getElementById('myChart3');
-        const ctx4 = document.getElementById('myChart4');
-        var data = []
-        var labels = []
-        for (var x of '<%= dataSet %>'.split(',')) {
-            data.push(x);
-        }
-        for (var x of '<%= labels %>'.split(',')) {
-            labels.push(x);
-        }
-        var dataObj = {
-            labels: labels,
-            datasets: [{
-                label: "Employees",
-                backgroundColor: ["#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850", "#34d8eb"],
-                data: data
-            }]
-        }
-        var optionsObj = {
-            maintainAspectRatio: false,
-            title: {
-                display: true,
-                text: 'Predicted world population (millions) in 2050'
+
+    <%- include("partials/footer") -%>
+
+
+        <script>
+            const ctx1 = document.getElementById('myChart1');
+            const ctx2 = document.getElementById('myChart2');
+            const ctx3 = document.getElementById('myChart3');
+            const ctx4 = document.getElementById('myChart4');
+            var data = []
+            var labels = []
+            for (var x of '<%= dataSet %>'.split(',')) {
+                data.push(x);
             }
-        }
-        new Chart(ctx1, {
-            type: 'polarArea',
-            data: dataObj,
-            options: optionsObj
-        });
-        new Chart(ctx2, {
-            type: 'bar',
-            data: dataObj,
-            options: optionsObj
-        });
-        new Chart(ctx3, {
-            type: 'doughnut',
-            data: dataObj,
-            options: optionsObj
-        });
-        new Chart(ctx4, {
-            type: 'line',
-            data: dataObj,
-            options: optionsObj
-        });
-    </script>
-    <script src="plugins/jquery/jquery.min.js"></script>
-    <!-- jQuery UI 1.11.4 -->
-    <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
-    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-    <script>
-        $.widget.bridge('uibutton', $.ui.button)
-    </script>
-    <!-- Bootstrap 4 -->
-    <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- ChartJS -->
-    <script src="plugins/chart.js/Chart.min.js"></script>
-    <!-- Sparkline -->
-    <script src="plugins/sparklines/sparkline.js"></script>
-    <!-- JQVMap -->
-    <script src="plugins/jqvmap/jquery.vmap.min.js"></script>
-    <script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-    <!-- jQuery Knob Chart -->
-    <script src="plugins/jquery-knob/jquery.knob.min.js"></script>
-    <!-- daterangepicker -->
-    <script src="plugins/moment/moment.min.js"></script>
-    <script src="plugins/daterangepicker/daterangepicker.js"></script>
-    <!-- Tempusdominus Bootstrap 4 -->
-    <script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-    <!-- Summernote -->
-    <script src="plugins/summernote/summernote-bs4.min.js"></script>
-    <!-- overlayScrollbars -->
-    <script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="dist/js/adminlte.js"></script>
-</body>
+            for (var x of '<%= labels %>'.split(',')) {
+                labels.push(x);
+            }
+            var dataObj = {
+                labels: labels,
+                datasets: [{
+                    label: "Employees",
+                    backgroundColor: ["#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850", "#34d8eb", "#00bfff", "#bf00ff", "#ffbf00", "#ffb3b3", "#1C9151", "#73911C", "#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850", "#34d8eb", "#00bfff", "#bf00ff", "#ffbf00", "#ffb3b3", "#1C9151", "#73911C"],
+                    data: data
+                }]
+            }
+            var optionsObj = {
+                maintainAspectRatio: false,
+                title: {
+                    display: true,
+                    text: 'Predicted world population (millions) in 2050'
+                }
+            }
+            new Chart(ctx1, {
+                type: 'polarArea',
+                data: dataObj,
+                options: optionsObj
+            });
+            new Chart(ctx2, {
+                type: 'bar',
+                data: dataObj,
+                options: optionsObj
+            });
+            new Chart(ctx3, {
+                type: 'doughnut',
+                data: dataObj,
+                options: optionsObj
+            });
+            new Chart(ctx4, {
+                type: 'line',
+                data: dataObj,
+                options: optionsObj
+            });
+        </script>
+
+        </body>
 
 </html>
