--- a/views/disableForm.ejs
+++ b/views/disableForm.ejs
@@ -1,44 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Employee Details</title>
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Tempusdominus Bootstrap 4 -->
-  <link rel="stylesheet" href="plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- JQVMap -->
-  <link rel="stylesheet" href="plugins/jqvmap/jqvmap.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="dist/css/adminlte.min.css">
-  <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-  <!-- Daterange picker -->
-  <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css">
-  <!-- summernote -->
-  <link rel="stylesheet" href="plugins/summernote/summernote-bs4.min.css">
-  <link rel="stylesheet" href="./stylesheets/styles.css">
-  <script src="https://use.fontawesome.com/d59744589c.js"></script>
-</head>
-
-<body class="hold-transition sidebar-mini layout-fixed">
-  <div class="wrapper">
-
-    <nav class="main-header navbar navbar-expand-lg navbar-light bg-info">
-      <i class="fa fa-home fa-lg"></i><a class="navbar-brand" href="/home">Home</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </nav>
+<%- include("partials/header") -%>
 
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
@@ -252,114 +215,10 @@
         </div>
       </section>
     </div>
-    <footer class="main-footer">
-      <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">Analytics.io</a>.</strong>
-      All rights reserved.
-      <div class="float-right d-none d-sm-inline-block">
-        <b>Version</b> 3.2.0
-      </div>
-    </footer>
-  </div>
 
 
-  <script src="plugins/jquery/jquery.min.js"></script>
-  <!-- jQuery UI 1.11.4 -->
-  <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
-  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-  <script>
-    $.widget.bridge('uibutton', $.ui.button)
-  </script>
-  <!-- Bootstrap 4 -->
-  <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- ChartJS -->
-  <script src="plugins/chart.js/Chart.min.js"></script>
-  <!-- Sparkline -->
-  <script src="plugins/sparklines/sparkline.js"></script>
-  <!-- JQVMap -->
-  <script src="plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-  <!-- jQuery Knob Chart -->
-  <script src="plugins/jquery-knob/jquery.knob.min.js"></script>
-  <!-- daterangepicker -->
-  <script src="plugins/moment/moment.min.js"></script>
-  <script src="plugins/daterangepicker/daterangepicker.js"></script>
-  <!-- Tempusdominus Bootstrap 4 -->
-  <script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <!-- Summernote -->
-  <script src="plugins/summernote/summernote-bs4.min.js"></script>
-  <!-- overlayScrollbars -->
-  <script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-  <!-- AdminLTE App -->
-  <script src="dist/js/adminlte.js"></script>
-  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="dist/js/pages/dashboard.js"></script>
-  <script>
-    var flag1 = 1;
-    var flag2 = [1, 1, 1];
-    $(document).ready(function () {
-      $("#taskStatusButton").click(function () {
-        if (flag1 == 1) {
-          $('#taskAliveButton').show();
-          $("#taskFinishedButton").show();
-          $("#createTaskBtn").show();
-          flag1 = 0;
-        }
-        else {
-          $('#taskAliveButton').hide();
-          $("#taskFinishedButton").hide();
-          $("#createTaskBtn").hide();
-          flag1 = 1;
-        }
+<%- include("partials/footer") -%>
 
-      })
-      $("#createTaskBtn").click(function () {
-        if (flag2[1] == 1) {
-          $("#finishedPanel").hide()
-          $("#alivePanel").hide();
-          $("#createPanel").show();
-          flag2[1] = 0;
-          flag2[0] = 1;
-          flag2[2] = 1
-        }
-        else {
-          $("#createPanel").hide();
-          flag2[1] = 1;
-        }
 
-      })
-      $("#taskFinishedButton").click(function () {
-        if (flag2[2] == 1) {
-          $("#alivePanel").hide();
-          $("#createPanel").hide();
-          $("#finishedPanel").show()
-          flag2[2] = 0;
-          flag2[0] = 1;
-          flag2[1] = 1;
-        }
-        else {
-          $("#finishedPanel").hide();
-          flag2[2] = 1;
-        }
-
-      })
-      $("#taskAliveButton").click(function () {
-        if (flag2[0] == 1) {
-          $("#finishedPanel").hide()
-          $("#createPanel").hide();
-          $("#alivePanel").show();
-          flag2[0] = 0;
-          flag2[1] = 1
-          flag2[2] = 1
-        }
-        else {
-          $("#alivePanel").hide();
-          flag2[0] = 1;
-        }
-
-      })
-    })
-
-  </script>
-</body>
-
+  </body>
 </html>
