--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,218 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+  
+<%- include("partials/header") -%>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Employee Details</title>
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Tempusdominus Bootstrap 4 -->
-  <link rel="stylesheet" href="plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- JQVMap -->
-  <link rel="stylesheet" href="plugins/jqvmap/jqvmap.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="dist/css/adminlte.min.css">
-  <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-  <!-- Daterange picker -->
-  <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css">
-  <!-- summernote -->
-  <link rel="stylesheet" href="plugins/summernote/summernote-bs4.min.css">
-  <link rel="stylesheet" href="./stylesheets/styles.css">
-  <script src="https://use.fontawesome.com/d59744589c.js"></script>
-</head>
+  <aside class="main-sidebar sidebar-dark-primary elevation-4">
+    <!-- Brand Logo -->
+    <a href="#" class="brand-link">
+      <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+        style="opacity: .8">
+      <span class="brand-text font-weight-light">Analytics</span>
+    </a>
 
-<body class="hold-transition sidebar-mini layout-fixed">
-  <div class="wrapper">
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <!-- Sidebar user panel (optional) -->
+      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+        <div class="image">
+          <img src="images/user.png" class="img-circle elevation-2" alt="User Image">
+        </div>
+        <div class="info">
+          <a href="#" class="d-block">
+            <%= name %>
+          </a>
+        </div>
+      </div>
 
-    <nav class="main-header navbar navbar-expand-lg navbar-light bg-info">
-      <i class="fa fa-home fa-lg"></i><a class="navbar-brand" href="/home">Home</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </nav>
-
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
-      <!-- Brand Logo -->
-      <a href="#" class="brand-link">
-        <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-          style="opacity: .8">
-        <span class="brand-text font-weight-light">Analytics</span>
-      </a>
-
-      <!-- Sidebar -->
-      <div class="sidebar">
-        <!-- Sidebar user panel (optional) -->
-        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-          <div class="image">
-            <img src="images/user.png" class="img-circle elevation-2" alt="User Image">
-          </div>
-          <div class="info">
-            <a href="#" class="d-block">
-              <%= name %>
-            </a>
+      <!-- SidebarSearch Form -->
+      <div class="form-inline">
+        <div class="input-group" data-widget="sidebar-search">
+          <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
+          <div class="input-group-append">
+            <button class="btn btn-sidebar">
+              <i class="fas fa-search fa-fw"></i>
+            </button>
           </div>
         </div>
+      </div>
+    </div>
+    <!-- /.sidebar -->
+  </aside>
 
-        <!-- SidebarSearch Form -->
-        <div class="form-inline">
-          <div class="input-group" data-widget="sidebar-search">
-            <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-            <div class="input-group-append">
-              <button class="btn btn-sidebar">
-                <i class="fas fa-search fa-fw"></i>
+  <div class="content-wrapper">
+    <section class="content">
+
+      <!-- modal -->
+      <div class="modal fade" id="analyticsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Analytics Mode</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
               </button>
             </div>
+            <div class="modal-body">
+              <form action="/analytics" method="get">
+                <div class="form-group">
+                  <label for="analyticsType">Select one from below</label>
+                  <select id="analyticsType" name="analyticsType" class="form-control">
+                    <option value="ManagerName">Managers Wise Count</option>
+                    <option value="Sex">Gender Count Info</option>
+                    <option value="RaceDesc">Race Description</option>
+                    <option value="RecruitmentSource">Recruitment Source</option>
+                    <option value="PerformanceScore">Performance Count</option>
+                    <option value="CitizenDesc">Citizen Description</option>
+                    <option value="MaritalDesc">Marital Description</option>
+                    <option value="Position">Designation Wise</option>
+                    <option value="Department">Department Wise Count</option>
+                    <option value="EmploymentStatus">Employment Status Info</option>
+                  </select>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Proceed</button>
+            </div>
+            </form>
           </div>
         </div>
       </div>
-      <!-- /.sidebar -->
-    </aside>
-    <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-      <section class="content">
 
-        <!-- modal -->
-        <div class="modal fade" id="analyticsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Analytics Mode</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
+      <div class="jumbotron d-flex align-items-center min-vh-100">
+        <div class="container">
+          <div class="row mb-10"></div>
+          <div class="row ">
+            <div class="col-md-3">
+              <div class="card" style="width: 13rem;">
+                <img class="card-img-top" src="images/employees.png" alt="Card image cap">
+                <div class="card-body">
+                  <a href="/data" class="btn btn-primary">Employees</a>
+                </div>
               </div>
-              <div class="modal-body">
-                <form action="/analytics" method="get">
-                  <div class="form-group">
-                    <label for="analyticsType">Select one from below</label>
-                    <select id="analyticsType" name="analyticsType" class="form-control">
-                      <option value="ManagerName">Managers Wise Count</option>
-                      <option value="Sex">Gender Count Info</option>
-                      <option value="RaceDesc">Race Description</option>
-                      <option value="RecruitmentSource">Recruitment Source</option>
-                      <option value="PerformanceScore">Performance Count</option>
-                      <option value="CitizenDesc">Citizen Description</option>
-                      <option value="MaritalDesc">Marital Description</option>
-                      <option value="Position">Designation Wise</option>
-                      <option value="Department">Department Wise Count</option>
-                      <option value="EmploymentStatus">Employment Status Info</option>
-                    </select>
-                  </div>
-
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Proceed</button>
-              </div>
-              </form>
             </div>
-          </div>
-        </div>
-
-        <div class="jumbotron d-flex align-items-center min-vh-100">
-          <div class="container">
-            <div class="row mb-10"></div>
-            <div class="row ">
-              <div class="col-md-3">
-                <div class="card" style="width: 13rem;">
-                  <img class="card-img-top" src="images/employees.png" alt="Card image cap">
-                  <div class="card-body">
-                    <a href="/data" class="btn btn-primary">Employees</a>
-                  </div>
+            <div class="col-md-3">
+              <div class="card" style="width: 13rem;">
+                <img class="card-img-top" src="images/performance.png" alt="Card image cap">
+                <div class="card-body">
+                  <a href="/analytics" class="btn btn-primary" data-toggle="modal"
+                    data-target="#analyticsModal">Performance</a>
                 </div>
               </div>
-              <div class="col-md-3">
-                <div class="card" style="width: 13rem;">
-                  <img class="card-img-top" src="images/performance.png" alt="Card image cap">
-                  <div class="card-body">
-                    <a href="/analytics" class="btn btn-primary" data-toggle="modal"
-                      data-target="#analyticsModal">Performance</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-                <div class="card" style="width: 13rem;">
-                  <img class="card-img-top" src="images/compensation.png" alt="Card image cap">
-                  <div class="card-body">
-                    <a href="#" class="btn btn-primary">Compensation</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-                <div class="card" style="width: 13rem;">
-                  <img class="card-img-top" src="images/helpdesk.png" alt="Card image cap">
-                  <div class="card-body">
-                    <a href="#" class="btn btn-primary">HelpDesk</a>
-                  </div>
-                </div>
-              </div>
-              <!-- /.col -->
             </div>
-            <!-- /.row -->
+            <div class="col-md-3">
+              <div class="card" style="width: 13rem;">
+                <img class="card-img-top" src="images/compensation.png" alt="Card image cap">
+                <div class="card-body">
+                  <a href="#" class="btn btn-primary">Compensation</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card" style="width: 13rem;">
+                <img class="card-img-top" src="images/helpdesk.png" alt="Card image cap">
+                <div class="card-body">
+                  <a href="#" class="btn btn-primary">HelpDesk</a>
+                </div>
+              </div>
+            </div>
+            <!-- /.col -->
           </div>
+          <!-- /.row -->
         </div>
-        <!-- /.container-fluid -->
-      </section>
-      <!-- /.content -->
-    </div>
-    <!-- /.content-wrapper -->
-    <footer class="main-footer">
-      <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">Analytics.io</a>.</strong>
-      All rights reserved.
-      <div class="float-right d-none d-sm-inline-block">
-        <b>Version</b> 3.2.0
       </div>
-    </footer>
-
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-      <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
+      <!-- /.container-fluid -->
+    </section>
+    <!-- /.content -->
   </div>
-  <!-- ./wrapper -->
-  <script src="plugins/jquery/jquery.min.js"></script>
-  <!-- jQuery UI 1.11.4 -->
-  <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
-  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-  <script>
-    $.widget.bridge('uibutton', $.ui.button)
-  </script>
-  <!-- Bootstrap 4 -->
-  <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- ChartJS -->
-  <script src="plugins/chart.js/Chart.min.js"></script>
-  <!-- Sparkline -->
-  <script src="plugins/sparklines/sparkline.js"></script>
-  <!-- JQVMap -->
-  <script src="plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-  <!-- jQuery Knob Chart -->
-  <script src="plugins/jquery-knob/jquery.knob.min.js"></script>
-  <!-- daterangepicker -->
-  <script src="plugins/moment/moment.min.js"></script>
-  <script src="plugins/daterangepicker/daterangepicker.js"></script>
-  <!-- Tempusdominus Bootstrap 4 -->
-  <script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <!-- Summernote -->
-  <script src="plugins/summernote/summernote-bs4.min.js"></script>
-  <!-- overlayScrollbars -->
-  <script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-  <!-- AdminLTE App -->
-  <script src="dist/js/adminlte.js"></script>
-  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="dist/js/pages/dashboard.js"></script>
-  <!-- <script src="javascripts/loadDetails.js"></script> -->
 
-</body>
+<%- include("partials/footer") -%>
 
+  </body>
 </html>
